--- a/JsMinBenchmark.csproj
+++ b/JsMinBenchmark.csproj
@@ -11,7 +11,15 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.5.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
       <PackageReference Include="NLog" Version="4.6.5" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Tools\tools.json" />
+      <Resource Include="Tools\tools.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Resource>
     </ItemGroup>
 
 </Project>
