--- a/.gitignore
+++ b/.gitignore
@@ -500,6 +500,12 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+# Rider files
+
+.idea/.idea.JsMinBenchmark/.idea/modules.xml
+.idea/.idea.JsMinBenchmark/riderModule.iml
+
+
 # JetBrains templates
 **___jb_tmp___
 
